--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
-    "pdfkit": "^0.8.0"
+    "pdfkit": "^0.8.0",
+    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
