--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "hyphen": "^1.1.0",
     "pdfkit": "^0.8.0",
-    "ramda": "^0.26.1"
+    "ramda": "^0.26.1",
+    "unicode-properties": "^1.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
