--- a/package.json
+++ b/package.json
@@ -1,32 +1,36 @@
 {
-  "version": "0.1.0",
+  "name": "@react-pdf/textkit",
+  "version": "0.3.0",
   "description": "An advanced text layout framework",
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "rimraf dist",
     "prepublish": "npm run build",
-    "build": "lerna run build",
-    "build:watch": "lerna run build:watch --concurrency=1000 --stream",
+    "build": "babel ./src --out-dir ./dist",
+    "build:watch": "babel ./src --out-dir ./dist --watch",
     "precommit": "lint-staged",
     "test": "jest"
   },
   "files": [
     "dist"
   ],
-  "author": "Devon Govett <devongovett@gmail.com>",
+  "contributors": [
+    "Devon Govett <devongovett@gmail.com>",
+    "Diego Muracciole <diegomuracciole@gmail.com>"
+  ],
   "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@react-pdf/pdfkit": "^1.2.0",
+    "@react-pdf/unicode-properties": "^2.2.0",
     "babel-runtime": "^6.26.0",
     "hyphen": "^1.1.1",
-    "ramda": "^0.26.1",
-    "unicode-properties": "^1.1.0"
+    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "@react-pdf/fontkit": "^1.13.0",
+     "@react-pdf/pdfkit": "^1.2.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
@@ -42,7 +46,6 @@
     "eslint-plugin-jest": "^21.14.0",
     "husky": "^0.14.3",
     "jest": "^22.4.2",
-    "lerna": "^2.8.0",
     "lint-staged": "^7.0.0",
     "prettier": "^1.11.1",
     "rimraf": "^2.6.2"
