--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,12 @@
 {
-  "presets": [["env", { "loose": true }]],
-  "plugins": [
-    "transform-runtime",
-    "transform-export-extensions",
-    "transform-object-rest-spread",
-    ["transform-class-properties", { "loose": true }]
-  ]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "loose": true
+      }
+    ],
+    "@babel/preset-react"
+  ],
+  "plugins": ["@babel/plugin-transform-runtime", "@babel/plugin-proposal-class-properties"]
 }
