--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@babel/runtime": "^7.4.3",
     "@react-pdf/unicode-properties": "^2.2.0",
     "babel-runtime": "^6.26.0",
     "hyphen": "^1.1.1",
@@ -39,15 +40,17 @@
   },
   "devDependencies": {
     "@react-pdf/fontkit": "^1.13.0",
-     "@react-pdf/pdfkit": "^1.2.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
+    "@react-pdf/pdfkit": "^1.2.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.3",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.1.0",
+    "babel-plugin-add-module-exports": "^1.0.0",
     "eslint": "^4.18.2",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
