--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.4.3",
+    "@react-pdf/unicode-properties": "2.3.0",
     "hyphen": "^1.1.1",
-    "ramda": "^0.26.1",
-    "unicode-properties": "^1.3.1"
+    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
